Clean up a bunch of stuff